[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Patrick <patrickrsmiranda@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
httpie = "^3.2.1"
flask-pydantic-spec = "^0.3.1"
tinydb = "^4.7.0"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
